--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ body {
 .card {
     width: 100px;
     height: 150px;
-    outline-color: #333;
+    outline-color: #ffffff;
     outline-width: 10px;
     outline-style: auto;
     background-color: #f4c129;
